--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                         <ul>
                             <li><img src="images/shopping-cart.png" alt="image of a shopping cart" width="40"></li>
                             <li><img src="images/avatar.png" alt="user profile avatar" width="40"></li>
+                            <li><i class="fa-solid fa-bars-staggered"></i></li>
                         </ul>
                     </div>
                 </div>
