--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
                 </div>
             </div>
         </nav>
+
+        <section class="hero"></section>
     </header>
     <main></main>
     <footer></footer>
