--- a/index.html
+++ b/index.html
@@ -95,7 +95,17 @@
                 <p>10k Reviews</p>
             </div>
          </div>
-        <div class="hero__right"></div>
+        <div class="hero__right">
+            <div class="hero__right__large">
+                <img src="images/hero-pizza.png" alt="pizza">
+            </div>
+            <div class="hero__right__small">
+                <img src="images/pizza-1.png" alt="pizza 1">
+                <img src="images/pizza-2.png" alt="pizza 2">
+                <img src="images/pizza-3.png" alt="pizza 3">
+                <img src="images/pizza-4.png" alt="pizza 4">
+            </div>
+        </div>
       </section>
     </header>
     <main></main>
