--- a/index.html
+++ b/index.html
@@ -60,51 +60,58 @@
       </nav>
 
       <section class="hero">
-        <div class="hero__left">
-          <p><strong> Easy way to order your food</strong></p>
-          <h1>
-            Chosing <span class="hero__left--orange">Healthy</span> &
-            <span class="hero__left--orange">Fresh</span> Pizza
-          </h1>
-          <p>
-            We offer the fastest and favorite pizza delivery services all over
-            the country.Search for your favorite pizza toppings here.
-          </p>
-        </div>
-        <div class="hero__left--search">
-          <i class="fa-solid fa-magnifying-glass"></i>
-          <form action="">
-            <input type="text" placeholder="Find Pizza Type" />
-            <input type="submit" value="Search" />
-          </form>
-        </div>
-         <div class="hero__left__stats">
-            <div class="hero__left__stats--grey">
-                <div><img src="images/cutlery.png" alt="cuttlery" width="80"></div>
+        <div class="container">
+          <div class="hero__container">
+            <div class="hero__left">
+              <p><strong> Easy way to order your food</strong></p>
+              <h1>Chosing <span class="hero__left--orange">Healthy</span> &
+                <span class="hero__left--orange">Fresh</span> Pizza
+              </h1>
+              <p>
+                We offer the fastest and favorite pizza delivery services all
+                over the country.Search for your favorite pizza toppings here.
+              </p>
+            <div class="hero__left__search">
+              <i class="fa-solid fa-magnifying-glass"></i>
+              <form action="">
+                <input type="text" placeholder="Find Pizza Type" />
+                <input type="submit" value="Search" />
+              </form>
+            </div>
+            <div class="hero__left__stats">
+              <div class="hero__left__stats--grey">
+                <div>
+                  <img src="images/cutlery.png" alt="cuttlery" width="80" />
+                </div>
                 <p>500+</p>
                 <p>Restaurants</p>
-            </div>
-            <div class="hero__left__stats--grey">
-                <div><img src="images/varieties.png" alt="varieties" width="80"></div>
+              </div>
+              <div class="hero__left__stats--grey">
+                <div>
+                  <img src="images/varieties.png" alt="varieties" width="80" />
+                </div>
                 <p>200+</p>
                 <p>Pizza Varieties</p>
-            </div>
-            <div class="hero__left__stats--grey">
-                <div><img src="images/star.png" alt="star" width="80"></div>
+              </div>
+              <div class="hero__left__stats--grey">
+                <div><img src="images/star.png" alt="star" width="80" /></div>
                 <p>(7.8)</p>
                 <p>10k Reviews</p>
+              </div>
             </div>
-         </div>
-        <div class="hero__right">
-            <div class="hero__right__large">
-                <img src="images/hero-pizza.png" alt="pizza">
             </div>
-            <div class="hero__right__small">
-                <img src="images/pizza-1.png" alt="pizza 1">
-                <img src="images/pizza-2.png" alt="pizza 2">
-                <img src="images/pizza-3.png" alt="pizza 3">
-                <img src="images/pizza-4.png" alt="pizza 4">
+            <div class="hero__right">
+              <div class="hero__right__large">
+                <img src="images/hero-pizza.png" alt="pizza" />
+              </div>
+              <div class="hero__right__small">
+                <img src="images/pizza-1.png" alt="pizza 1" width="130"/>
+                <img src="images/pizza-2.png" alt="pizza 2" width="100"/>
+                <img src="images/pizza-3.png" alt="pizza 3" width="100"/>
+                <img src="images/pizza-4.png" alt="pizza 4" width="100"/>
+              </div>
             </div>
+          </div>
         </div>
       </section>
     </header>
