--- a/index.html
+++ b/index.html
@@ -1,121 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pizaara Deliveries</title>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
-  <body>
-    <header>
-      <nav class="nav">
-        <div class="container">
-          <div class="nav__container">
-            <div class="nav__left">
-              <img src="images/logo.svg" alt="logo for pizaara deliveries" />
-            </div>
-            <div class="nav__center">
-              <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul>
-            </div>
-            <div class="nav__right">
-              <ul>
-                <li>
-                  <img
-                    src="images/shopping-cart.png"
-                    alt="image of a shopping cart"
-                    width="40"
-                  />
-                </li>
-                <li>
-                  <img
-                    src="images/avatar.png"
-                    alt="user profile avatar"
-                    width="40"
-                  />
-                </li>
-                <li><i class="fa-solid fa-bars-staggered"></i></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </nav>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap"
+    rel="stylesheet"/>
+    <title>Pizaara Deliveries</title>
+</head>
+<body>
 
-      <section class="hero">
-        <div class="container">
-          <div class="hero__container">
-            <div class="hero__left">
-              <p><strong> Easy way to order your food</strong></p>
-              <h1>Chosing <span class="hero__left--orange">Healthy</span> &
-                <span class="hero__left--orange">Fresh</span> Pizza
-              </h1>
-              <p>
-                We offer the fastest and favorite pizza delivery services all
-                over the country.Search for your favorite pizza toppings here.
-              </p>
-            <div class="hero__left__search">
-              <i class="fa-solid fa-magnifying-glass"></i>
-              <form action="">
-                <input type="text" placeholder="Find Pizza Type" />
-                <input type="submit" value="Search" />
-              </form>
-            </div>
-            <div class="hero__left__stats">
-              <div class="hero__left__stats--grey">
-                <div>
-                  <img src="images/cutlery.png" alt="cuttlery" width="80" />
-                </div>
-                <p>500+</p>
-                <p>Restaurants</p>
-              </div>
-              <div class="hero__left__stats--grey">
-                <div>
-                  <img src="images/varieties.png" alt="varieties" width="80" />
-                </div>
-                <p>200+</p>
-                <p>Pizza Varieties</p>
-              </div>
-              <div class="hero__left__stats--grey">
-                <div><img src="images/star.png" alt="star" width="80" /></div>
-                <p>(7.8)</p>
-                <p>10k Reviews</p>
-              </div>
-            </div>
-            </div>
-            <div class="hero__right">
-              <div class="hero__right__large">
-                <img src="images/hero-pizza.png" alt="pizza" />
-              </div>
-              <div class="hero__right__small">
-                <img src="images/pizza-1.png" alt="pizza 1" width="130"/>
-                <img src="images/pizza-2.png" alt="pizza 2" width="100"/>
-                <img src="images/pizza-3.png" alt="pizza 3" width="100"/>
-                <img src="images/pizza-4.png" alt="pizza 4" width="100"/>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </header>
+
     <main></main>
+
+
     <footer></footer>
-  </body>
+
+</body>
 </html>
