--- a/index.html
+++ b/index.html
@@ -21,5 +21,36 @@
     />
   </head>
   <body>
+
+    <header>
+      <section class="nav">
+          <div class="container">
+           <div class="nav__container">
+              <div class="nav__container__left">
+                  <img src="images/logo.svg" alt="company logo" />
+              </div>
+              <div class="nav__container__center">
+                  <ul>
+                      <li><a href="#">Home</a></li>
+                      <li><a href="#">About Us</a></li>
+                      <li><a href="#">Shop</a></li>
+                      <li><a href="#">Contact</a></li>
+                  </ul>
+              </div>
+              <div class="nav__container__right">
+                  <img src="images/shopping-cart.png" alt="shopping cart" />
+                  <img src="images/avatar.png" alt="avatar image">
+              </div>
+           </div>
+          </div>
+      </section>
+  </header>
+
+
+  <main></main>
+
+
+  <footer></footer>
+
   </body>
 </html>
