finished the styling of the nav bar

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
                   </ul>
               </div>
               <div class="nav__container__right">
-                  <img src="images/shopping-cart.png" alt="shopping cart" />
-                  <img src="images/avatar.png" alt="avatar image">
+                <ul>
+                  <li><a href="#"><img src="images/shopping-cart.png" alt="shopping cart" width="80"/></a></li>
+                  <li><a href="#"><img src="images/avatar.png" alt="avatar image" width="80"/></a></li>
+                </ul>
               </div>
            </div>
           </div>
@@ -47,7 +49,9 @@
   </header>
 
 
-  <main></main>
+  <main>
+    
+  </main>
 
 
   <footer></footer>
