--- a/index.html
+++ b/index.html
@@ -50,7 +50,49 @@
 
 
   <main>
-    
+    <div class="hero">
+      <div class="container">
+        <div class="hero__container">
+          <div class="hero__left">
+            <p><strong>Easy way to order your food</strong></p>
+            <h1>Choosing <span class="hero__left--orange">Healthy</span>&<span class="hero__left--orange"></span> Fresh</h1>
+            <p>We offer the fastest and favourite pizza delivery services all over the country.search for your favorite pizza toppings here.</p>
+            <div class="hero__left__search">
+              <i class="fa-solid fa-magnifying-glass"></i>
+              <form action="">
+                <input type="text" placeholder="Find Pizza Type">
+                <button>Search</button>
+              </form>
+            </div>
+
+            <div class="hero__left__stats">
+              <div class="hero__left__stats__left">
+                <div class="hero__left__stats__img">
+                  <img src="images/cutlery.png" alt="cuttlery">
+                </div>
+                <p><strong>500+</strong></p>
+                <p><strong>Restaurants</strong></p>
+              </div>
+              <div class="hero__left__stats__center">
+                <div class="hero__left__stats__img">
+                  <img src="images/varieties.png" alt="varietis">
+                </div>
+                <p><strong>200+</strong></p>
+                <p><strong>Pizza Varieties</strong></p>
+              </div>
+              <div class="hero__left__stats__right">
+                <div class="hero__left__stats__img">
+                  <img src="images/star.png" alt="star">
+                </div>
+                <p><strong>(7.8)</strong></p>
+                <p><strong>10k Reviews</strong></p>
+              </div>
+            </div>
+          </div>
+          <div class="hero__right"></div>
+        </div>
+      </div>
+    </div>
   </main>
 
 
