created the markup for the right hero section

--- a/index.html
+++ b/index.html
@@ -89,7 +89,18 @@
               </div>
             </div>
           </div>
-          <div class="hero__right"></div>
+          <div class="hero__right">
+            <img src="images/hero-pizza.png" alt="pizza">
+            <div class="hero__right__img">
+              <img src="images/pizza-1.png" alt="pizza 1">
+            </div>
+            <div class="hero__right__img">
+              <img src="images/pizza-2.png" alt="pizza 2">
+            </div>
+            <div class="hero__right__img">
+              <img src="images/pizza-3.png" alt="pizza 3">
+            </div>
+          </div>
         </div>
       </div>
     </div>
