styled the right hero section

--- a/index.html
+++ b/index.html
@@ -89,16 +89,23 @@
               </div>
             </div>
           </div>
+
+
           <div class="hero__right">
             <img src="images/hero-pizza.png" alt="pizza">
             <div class="hero__right__img">
-              <img src="images/pizza-1.png" alt="pizza 1">
-            </div>
-            <div class="hero__right__img">
-              <img src="images/pizza-2.png" alt="pizza 2">
-            </div>
-            <div class="hero__right__img">
-              <img src="images/pizza-3.png" alt="pizza 3">
+              <div>
+                <img src="images/pizza-1.png" alt="pizza 1" width="210">
+              </div>
+              <div>
+                <img src="images/pizza-2.png" alt="pizza 2" width="150">
+              </div>
+              <div>
+                <img src="images/pizza-3.png" alt="pizza 3" width="150">
+              </div>
+              <div>
+                <img src="images/pizza-4.png" alt="pizza 4" width="150">
+              </div>
             </div>
           </div>
         </div>
