styled the menu section

--- a/index.html
+++ b/index.html
@@ -143,30 +143,31 @@
               </a>
             </li>
           </ul>
+        </div>
 
           <div class="container">
             <div class="menu__container">
-              <div class="menu__container__left">
-                <img src="images/barbecue-chicken-pizza.png" alt="barbeque chicken pizza">
-                <div>
+              <div>
+                <img src="images/barbecue-chicken-pizza.png" alt="barbeque chicken pizza" width="300">
+                <div class="menu__container__variety">
                   <h4>BBQ Chicken Pizza</h4>
                   <p>(Cheese with shrimp)</p>
                   <h4>Ksh.1500</h4>
                 </div>
                 <button>Add to Cart</button>
               </div>
-              <div class="menu__container__center">
-                <img src="images/tandoori-chicken.png" alt="tandoori chicken pizza">
-                <div>
+              <div>
+                <img src="images/tandoori-chicken.png" alt="tandoori chicken pizza" width="300">
+                <div class="menu__container__variety">
                   <h4>Tandoori Chicken Pizza</h4>
                   <p>(Cheese with shrimp)</p>
                   <h4>Ksh.1500</h4>
                 </div>
                 <button>Add to Cart</button>
               </div>
-              <div class="menu__container__right">
-                <img src="images/chicken-kebab.png" alt="Chicken Kebab Pizza">
-                <div>
+              <div>
+                <img src="images/chicken-kebab.png" alt="Chicken Kebab Pizza" width="387">
+                <div class="menu__container__variety">
                   <h4>Chicken Kebab Pizza</h4>
                   <p>(Cheese with shrimp)</p>
                   <h4>Ksh.1500</h4>
@@ -175,7 +176,7 @@
               </div>
             </div>
           </div>
-        </div>
+          <button>View More</button>
     </section>
   </main>
 
