created the markup for the about us section

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
       </div>
     </div>
 
+    <!-- the menu section -->
     <section class="menu">
       <p><span class="menu--orange">New in Menu</span></p>
       <h2><span class="menu--orange">Special Menu</span> For You</h2>
@@ -177,6 +178,53 @@
             </div>
           </div>
           <button>View More</button>
+    </section>
+    <!-- /the menu section -->
+
+
+    <!-- the about us section -->
+    <section class="about">
+      <div class="container">
+        <div class="about__container">
+          <div class="about__container__img">
+            <img src="images/why-us.png" alt="Why us image">
+          </div>
+          <div class="about__container__content">
+            <p><span class="about__orange">Why Us</span></p>
+            <h2>Why We Are <span class="about--orange">The Best</span></h2>
+            <p>We always try to maintain our food quality for our customers. Our customers' satisfaction is our top priority.</p>
+            <div class="about__container__content__qualities">
+              <div>
+                <div>
+                  <img src="images/fresh-pizza.png" alt="fresh pizza">
+                </div>
+                <div>
+                  <h3>Fresh Pizza</h3>
+                  <p>We make our pizza to suit your needs as we use the best quality ingridients.</p>
+                </div>
+              </div>
+              <div>
+                <div>
+                  <img src="images/fast-delivery.png" alt="fast delivery">
+                </div>
+                <div>
+                  <h3>Fast Delivery</h3>
+                  <p>Through rapid delivery, we provide a high level of customer services.</p>
+                </div>
+              </div>
+              <div>
+                <div>
+                  <img src="images/quality.png" alt="high quality">
+                </div>
+                <div>
+                  <h3>Best Quality</h3>
+                  <p>Our delivery service is available at any time and usually everyday.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
 
