--- a/index.html
+++ b/index.html
@@ -186,35 +186,35 @@
     <section class="about">
       <div class="container">
         <div class="about__container">
-          <div class="about__container__img">
+          <div class="about__container__left">
             <img src="images/why-us.png" alt="Why us image">
           </div>
-          <div class="about__container__content">
+          <div class="about__container__right">
             <p><span class="about__orange">Why Us</span></p>
             <h2>Why We Are <span class="about--orange">The Best</span></h2>
             <p>We always try to maintain our food quality for our customers. Our customers' satisfaction is our top priority.</p>
-            <div class="about__container__content__qualities">
-              <div>
-                <div>
-                  <img src="images/fresh-pizza.png" alt="fresh pizza">
+            <div class="about__container__content">
+              <div class="about__container__content__qualities">
+                <div class="about__container__content__qualities__img">
+                  <img src="images/fresh-pizza.png" alt="fresh pizza" width="50">
                 </div>
                 <div>
                   <h3>Fresh Pizza</h3>
                   <p>We make our pizza to suit your needs as we use the best quality ingridients.</p>
                 </div>
               </div>
-              <div>
-                <div>
-                  <img src="images/fast-delivery.png" alt="fast delivery">
+              <div class="about__container__content__qualities">
+                <div class="about__container__content__qualities__img">
+                  <img src="images/fast-delivery.png" alt="fast delivery" width="50">
                 </div>
                 <div>
                   <h3>Fast Delivery</h3>
                   <p>Through rapid delivery, we provide a high level of customer services.</p>
                 </div>
               </div>
-              <div>
-                <div>
-                  <img src="images/quality.png" alt="high quality">
+              <div class="about__container__content__qualities">
+                <div class="about__container__content__qualities__img">
+                  <img src="images/quality.png" alt="high quality" width="50">
                 </div>
                 <div>
                   <h3>Best Quality</h3>
