finished styling the about us section

--- a/index.html
+++ b/index.html
@@ -21,101 +21,120 @@
     />
   </head>
   <body>
-
     <header>
       <section class="nav">
-          <div class="container">
-           <div class="nav__container">
-              <div class="nav__container__left">
-                  <img src="images/logo.svg" alt="company logo" />
-              </div>
-              <div class="nav__container__center">
-                  <ul>
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">About Us</a></li>
-                      <li><a href="#">Shop</a></li>
-                      <li><a href="#">Contact</a></li>
-                  </ul>
-              </div>
-              <div class="nav__container__right">
-                <ul>
-                  <li><a href="#"><img src="images/shopping-cart.png" alt="shopping cart" width="80"/></a></li>
-                  <li><a href="#"><img src="images/avatar.png" alt="avatar image" width="80"/></a></li>
-                </ul>
-              </div>
-           </div>
+        <div class="container">
+          <div class="nav__container">
+            <div class="nav__container__left">
+              <img src="images/logo.svg" alt="company logo" />
+            </div>
+            <div class="nav__container__center">
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </div>
+            <div class="nav__container__right">
+              <ul>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="images/shopping-cart.png"
+                      alt="shopping cart"
+                      width="80"
+                  /></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="images/avatar.png" alt="avatar image" width="80"
+                  /></a>
+                </li>
+              </ul>
+            </div>
           </div>
+        </div>
       </section>
-  </header>
+    </header>
 
+    <main>
+      <div class="hero">
+        <div class="container">
+          <div class="hero__container">
+            <div class="hero__left">
+              <p><strong>Easy way to order your food</strong></p>
+              <h1>
+                Choosing <span class="hero__left--orange">Healthy</span> &
+                <span class="hero__left--orange"> Fresh</span> Pizza
+              </h1>
+              <p>
+                We offer the fastest and favourite pizza delivery services all
+                over the country.search for your favorite pizza toppings here.
+              </p>
+              <div class="hero__left__search">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <form action="">
+                  <input type="text" placeholder="Find Pizza Type" />
+                  <button>Search</button>
+                </form>
+              </div>
 
-  <main>
-    <div class="hero">
-      <div class="container">
-        <div class="hero__container">
-          <div class="hero__left">
-            <p><strong>Easy way to order your food</strong></p>
-            <h1>Choosing <span class="hero__left--orange">Healthy</span> & <span class="hero__left--orange"> Fresh</span> Pizza </h1>
-            <p>We offer the fastest and favourite pizza delivery services all over the country.search for your favorite pizza toppings here.</p>
-            <div class="hero__left__search">
-              <i class="fa-solid fa-magnifying-glass"></i>
-              <form action="">
-                <input type="text" placeholder="Find Pizza Type">
-                <button>Search</button>
-              </form>
+              <div class="hero__left__stats">
+                <div class="hero__left__stats__left">
+                  <div class="hero__left__stats__img">
+                    <img src="images/cutlery.png" alt="cuttlery" width="40" />
+                  </div>
+                  <p><strong>500+</strong></p>
+                  <p><strong>Restaurants</strong></p>
+                </div>
+                <div class="hero__left__stats__center">
+                  <div class="hero__left__stats__img">
+                    <img
+                      src="images/varieties.png"
+                      alt="varieties"
+                      width="40"
+                      height="40"
+                    />
+                  </div>
+                  <p><strong>200+</strong></p>
+                  <p><strong>Pizza Varieties</strong></p>
+                </div>
+                <div class="hero__left__stats__right">
+                  <div class="hero__left__stats__img">
+                    <img src="images/star.png" alt="star" width="40" />
+                  </div>
+                  <p><strong>(7.8)</strong></p>
+                  <p><strong>10k Reviews</strong></p>
+                </div>
+              </div>
             </div>
 
-            <div class="hero__left__stats">
-              <div class="hero__left__stats__left">
-                <div class="hero__left__stats__img">
-                  <img src="images/cutlery.png" alt="cuttlery" width="40">
+            <div class="hero__right">
+              <img src="images/hero-pizza.png" alt="pizza" />
+              <div class="hero__right__img">
+                <div>
+                  <img src="images/pizza-1.png" alt="pizza 1" width="210" />
                 </div>
-                <p><strong>500+</strong></p>
-                <p><strong>Restaurants</strong></p>
-              </div>
-              <div class="hero__left__stats__center">
-                <div class="hero__left__stats__img">
-                  <img src="images/varieties.png" alt="varieties" width="40" height="40">
+                <div>
+                  <img src="images/pizza-2.png" alt="pizza 2" width="150" />
                 </div>
-                <p><strong>200+</strong></p>
-                <p><strong>Pizza Varieties</strong></p>
-              </div>
-              <div class="hero__left__stats__right">
-                <div class="hero__left__stats__img">
-                  <img src="images/star.png" alt="star" width="40">
+                <div>
+                  <img src="images/pizza-3.png" alt="pizza 3" width="150" />
                 </div>
-                <p><strong>(7.8)</strong></p>
-                <p><strong>10k Reviews</strong></p>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="hero__right">
-            <img src="images/hero-pizza.png" alt="pizza">
-            <div class="hero__right__img">
-              <div>
-                <img src="images/pizza-1.png" alt="pizza 1" width="210">
-              </div>
-              <div>
-                <img src="images/pizza-2.png" alt="pizza 2" width="150">
-              </div>
-              <div>
-                <img src="images/pizza-3.png" alt="pizza 3" width="150">
-              </div>
-              <div>
-                <img src="images/pizza-4.png" alt="pizza 4" width="150">
+                <div>
+                  <img src="images/pizza-4.png" alt="pizza 4" width="150" />
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <!-- the menu section -->
-    <section class="menu">
-      <p><span class="menu--orange">New in Menu</span></p>
-      <h2><span class="menu--orange">Special Menu</span> For You</h2>
+      <!-- the menu section -->
+      <section class="menu">
+        <p><span class="menu--orange">New in Menu</span></p>
+        <h2><span class="menu--orange">Special Menu</span> For You</h2>
         <div class="menu__list">
           <ul>
             <li>
@@ -146,90 +165,125 @@
           </ul>
         </div>
 
-          <div class="container">
-            <div class="menu__container">
-              <div>
-                <img src="images/barbecue-chicken-pizza.png" alt="barbeque chicken pizza" width="300">
-                <div class="menu__container__variety">
-                  <h4>BBQ Chicken Pizza</h4>
-                  <p>(Cheese with shrimp)</p>
-                  <h4>Ksh.1500</h4>
-                </div>
-                <button>Add to Cart</button>
+        <div class="container">
+          <div class="menu__container">
+            <div>
+              <img
+                src="images/barbecue-chicken-pizza.png"
+                alt="barbeque chicken pizza"
+                width="300"
+              />
+              <div class="menu__container__variety">
+                <h4>BBQ Chicken Pizza</h4>
+                <p>(Cheese with shrimp)</p>
+                <h4>Ksh.1500</h4>
               </div>
-              <div>
-                <img src="images/tandoori-chicken.png" alt="tandoori chicken pizza" width="300">
-                <div class="menu__container__variety">
-                  <h4>Tandoori Chicken Pizza</h4>
-                  <p>(Cheese with shrimp)</p>
-                  <h4>Ksh.1500</h4>
-                </div>
-                <button>Add to Cart</button>
+              <button>Add to Cart</button>
+            </div>
+            <div>
+              <img
+                src="images/tandoori-chicken.png"
+                alt="tandoori chicken pizza"
+                width="300"
+              />
+              <div class="menu__container__variety">
+                <h4>Tandoori Chicken Pizza</h4>
+                <p>(Cheese with shrimp)</p>
+                <h4>Ksh.1500</h4>
               </div>
-              <div>
-                <img src="images/chicken-kebab.png" alt="Chicken Kebab Pizza" width="387">
-                <div class="menu__container__variety">
-                  <h4>Chicken Kebab Pizza</h4>
-                  <p>(Cheese with shrimp)</p>
-                  <h4>Ksh.1500</h4>
-                </div>
-                <button>Add to Cart</button>
+              <button>Add to Cart</button>
+            </div>
+            <div>
+              <img
+                src="images/chicken-kebab.png"
+                alt="Chicken Kebab Pizza"
+                width="387"
+              />
+              <div class="menu__container__variety">
+                <h4>Chicken Kebab Pizza</h4>
+                <p>(Cheese with shrimp)</p>
+                <h4>Ksh.1500</h4>
               </div>
+              <button>Add to Cart</button>
             </div>
           </div>
-          <button>View More</button>
-    </section>
-    <!-- /the menu section -->
+        </div>
+        <button>View More</button>
+      </section>
+      <!-- /the menu section -->
 
-
-    <!-- the about us section -->
-    <section class="about">
-      <div class="container">
-        <div class="about__container">
-          <div class="about__container__left">
-            <img src="images/why-us.png" alt="Why us image">
-          </div>
-          <div class="about__container__right">
-            <p><span class="about__orange">Why Us</span></p>
-            <h2>Why We Are <span class="about--orange">The Best</span></h2>
-            <p>We always try to maintain our food quality for our customers. Our customers' satisfaction is our top priority.</p>
-            <div class="about__container__content">
-              <div class="about__container__content__qualities">
-                <div class="about__container__content__qualities__img">
-                  <img src="images/fresh-pizza.png" alt="fresh pizza" width="50">
+      <!-- the about us section -->
+      <section class="about">
+        <div class="container">
+          <div class="about__container">
+            <div class="about__container__left">
+              <img src="images/why-us.png" alt="Why us image" />
+            </div>
+            <div class="about__container__right">
+              <p>
+                <span class="about__orange"> <strong> Why Us</strong></span>
+              </p>
+              <h2>Why We Are <span class="about--orange">The Best</span></h2>
+              <p>
+                We always try to maintain our food quality for our customers.
+                Our customers' satisfaction is our top priority.
+              </p>
+              <div class="about__container__content">
+                <div class="about__container__content__qualities">
+                  <div class="about__container__content__qualities__img">
+                    <img
+                      src="images/fresh-pizza.png"
+                      alt="fresh pizza"
+                      width="50"
+                    />
+                  </div>
+                  <div>
+                    <h3>Fresh Pizza</h3>
+                    <p>
+                      We make our pizza to suit your needs as we use the best
+                      quality ingridients.
+                    </p>
+                  </div>
                 </div>
-                <div>
-                  <h3>Fresh Pizza</h3>
-                  <p>We make our pizza to suit your needs as we use the best quality ingridients.</p>
+                <div class="about__container__content__qualities">
+                  <div class="about__container__content__qualities__img">
+                    <img
+                      src="images/fast-delivery.png"
+                      alt="fast delivery"
+                      width="50"
+                    />
+                  </div>
+                  <div>
+                    <h3>Fast Delivery</h3>
+                    <p>
+                      Through rapid delivery, we provide a high level of
+                      customer services.
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <div class="about__container__content__qualities">
-                <div class="about__container__content__qualities__img">
-                  <img src="images/fast-delivery.png" alt="fast delivery" width="50">
-                </div>
-                <div>
-                  <h3>Fast Delivery</h3>
-                  <p>Through rapid delivery, we provide a high level of customer services.</p>
-                </div>
-              </div>
-              <div class="about__container__content__qualities">
-                <div class="about__container__content__qualities__img">
-                  <img src="images/quality.png" alt="high quality" width="50">
-                </div>
-                <div>
-                  <h3>Best Quality</h3>
-                  <p>Our delivery service is available at any time and usually everyday.</p>
+                <div class="about__container__content__qualities">
+                  <div class="about__container__content__qualities__img">
+                    <img
+                      src="images/quality.png"
+                      alt="high quality"
+                      width="50"
+                    />
+                  </div>
+                  <div>
+                    <h3>Best Quality</h3>
+                    <p>
+                      Our delivery service is available at any time and usually
+                      everyday.
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-  </main>
+      </section>
+    </main>
 
-
-  <footer></footer>
-
+    <footer></footer>
   </body>
 </html>
