--- a/index.html
+++ b/index.html
@@ -282,6 +282,45 @@
           </div>
         </div>
       </section>
+      <!-- /about us -->
+
+      <!-- contact us -->
+      <section class="contact">
+        <p><span>Need Any Help ?</span></p>
+        <h2><span>Our Support Team</span> Is Ready To Assist You</h2>
+        <div class="container">
+          <div class="contact__container">
+            <div class="contact__container__images">
+              <div class="contact__container__img">
+                <img src="images/mail.png" alt="email" width="50">
+              </div>
+              <div class="contact__container__img">
+                <img src="images/live-support.png" alt="live support" width="50">
+              </div>
+              <div class="contact__container__img">
+                <img src="images/phone.png" alt="call now" width="50">
+              </div>
+            </div>
+
+              <div class="contact__container__details">
+                <div class="contact__container__detail">
+                  <h3>Email Address</h3>
+                  <p>pizaaraadeliveries@gmail.com</p>
+                </div>
+                <div class="contact__container__detail">
+                  <h3>Live Support</h3>
+                  <p>Get live support now</p>
+                </div>
+                <div class="contact__container__detail">
+                  <h3>Phone Number</h3>
+                  <p>+2547 11 555 888</p>
+                </div>
+              </div>
+
+            </div>
+        </div>
+      </section>
+      <!-- /contact us -->
     </main>
 
     <footer></footer>
