styled the contact us section

--- a/index.html
+++ b/index.html
@@ -323,6 +323,14 @@
       <!-- /contact us -->
     </main>
 
-    <footer></footer>
+    <footer>
+      <section class="footer">
+        <div class="container">
+          <div class="footer__container">
+            
+          </div>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
