--- a/index.html
+++ b/index.html
@@ -327,7 +327,42 @@
       <section class="footer">
         <div class="container">
           <div class="footer__container">
-            
+            <div class="footer__left">
+              <img src="images/logo.svg" alt="company logo">
+              <h2>Stay Connected</h2>
+              <div class="footer__left__images">
+                <div>
+                  <img src="images/facebook.png" alt="facebook logo" width="30">
+                </div>
+                <div>
+                  <img src="images/instagram.png" alt="instagram logo" width="30">
+                </div>
+                <div>
+                  <img src="images/twitter.png" alt="twitter logo" width="30">
+                </div>
+                <div>
+                  <img src="images/linkedin.png" alt="linked in logo" width="30">
+                </div>
+              </div>
+            </div>
+            <div class="footer__center">
+              <ul>
+                <li><h2>Quick Links</h2></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Contact Us</a></li>
+              </ul>
+            </div>
+            <div class="footer__right">
+              <h2>Subscribe To Our Newsletter To Stay Updated.</h2>
+              <div>
+                <form action="">
+                  <input type="email" placeholder="Email Address">
+                </form>
+                <button>Subscribe</button>
+              </div>
+            </div>
           </div>
         </div>
       </section>
