startedstyling the footer section

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             <div class="footer__left">
               <img src="images/logo.svg" alt="company logo">
               <h2>Stay Connected</h2>
-              <div class="footer__left__images">
+              <div class="footer__left__socials">
                 <div>
                   <img src="images/facebook.png" alt="facebook logo" width="30">
                 </div>
