placed the nav bar and started styling the shop hero section

--- a/index.html
+++ b/index.html
@@ -145,7 +145,85 @@
             <li>
               <a href="#">
                 <h3>Pepperoni</h3>
+               <section class="menu">
+        <p><span class="menu--orange">New in Menu</span></p>
+        <h2><span class="menu--orange">Special Menu</span> For You</h2>
+        <div class="menu__list">
+          <ul>
+            <li>
+              <a href="@">
+                <h3>Chicken Pizza</h3>
               </a>
+            </li>
+            <li>
+              <a href="#">
+                <h3>Pepperoni</h3>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <h3>Margherita</h3>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <h3>Hawaiian</h3>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <h3>Meat Lover's Pizza</h3>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="container">
+          <div class="menu__container">
+            <div>
+              <img
+                src="images/barbecue-chicken-pizza.png"
+                alt="barbeque chicken pizza"
+                width="300"
+              />
+              <div class="menu__container__variety">
+                <h4>BBQ Chicken Pizza</h4>
+                <p>(Cheese with shrimp)</p>
+                <h4>Ksh.1500</h4>
+              </div>
+              <button>Add to Cart</button>
+            </div>
+            <div>
+              <img
+                src="images/tandoori-chicken.png"
+                alt="tandoori chicken pizza"
+                width="300"
+              />
+              <div class="menu__container__variety">
+                <h4>Tandoori Chicken Pizza</h4>
+                <p>(Cheese with shrimp)</p>
+                <h4>Ksh.1500</h4>
+              </div>
+              <button>Add to Cart</button>
+            </div>
+            <div>
+              <img
+                src="images/chicken-kebab.png"
+                alt="Chicken Kebab Pizza"
+                width="387"
+              />
+              <div class="menu__container__variety">
+                <h4>Chicken Kebab Pizza</h4>
+                <p>(Cheese with shrimp)</p>
+                <h4>Ksh.1500</h4>
+              </div>
+              <button>Add to Cart</button>
+            </div>
+          </div>
+        </div>
+        <button>View More</button>
+      </section>
+        </a>
             </li>
             <li>
               <a href="#">
